--- a/src/app/modules/recruitment/admin-dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/recruitment/admin-dashboard/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
       </span>
       </div>
       <div style="padding:5px">
-        <span class="header5-bold">356,500</span>
+        <span class="header5-bold">{{ jobsCounter }}</span>
       </div>
      </div>
      </div>
