--- a/src/app/modules/recruitment/admin-dashboard/newjob/newjob.component.html
+++ b/src/app/modules/recruitment/admin-dashboard/newjob/newjob.component.html
@@ -37,7 +37,7 @@
           <div class="form-group row mydiv">
             <label for="Region" class="col-sm-3 col-form-label mylabel">Region, City or Zip Code</label>
             <div class="col-sm-6 col-md-6 col-lg-6">
-              <select class="custom-select" name="state" #state="ngModel" [(ngModel)]="newJobModel.state" required>
+              <select class="custom-select" name="state" #state="ngModel" [(ngModel)]="newJobModel.stateId" required>
                 <option value="">--Select State--</option>
                 <option *ngFor="let state of allStates" [value]="state.id">{{state.name}}</option>
               </select>
@@ -162,7 +162,7 @@
           <div class="form-group row">
             <label for="Beneficiary" class="col-sm-3 col-form-label">Reviewers</label>
             <div class="col-sm-6 col-md-6 col-lg-6">
-              <button type="submit" (click)="showMasterSearchModal()" class="btn cancel-button"
+              <!-- <button type="submit" (click)="showMasterSearchModal()" class="btn cancel-button"
                 style="padding: 5px 20px;">
                 <span class="file-cta">
                   <span class="file-icon">
@@ -170,7 +170,7 @@
                   </span>
                 </span>
                 Add Reviewers
-              </button>
+              </button> -->
               <ngx-employee-master-search></ngx-employee-master-search>
 
             </div>
@@ -220,12 +220,12 @@
 
 
   <ngx-side-modal [(show)]="showModal">
-    <div modal-header>{{selectionHeader}}</div>
+    <div modal-header><Header></Header></div>
     <div modal-body>
-      <nb-form-field>
+      <!-- <nb-form-field>
         <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
         <input type="text" nbInput class="form-control">
-      </nb-form-field>
+      </nb-form-field> -->
       <div class="row">
         <div class="col-sm-4 form-group">
           <label>Department</label>
