--- a/src/app/components/employee-master-search/employee-master-search.component.html
+++ b/src/app/components/employee-master-search/employee-master-search.component.html
@@ -12,7 +12,7 @@
 
 </div>
 
-<ngx-side-modal [(show)]="showModal" >
+<ngx-side-modal [(show)]="showModal" (closed)="modalClosed($event)">
     <div modal-header>{{selectionHeader}}</div>
     <div modal-body >
         <nb-card style="border: none;padding: 0px;margin: 0px;">
