--- a/src/app/modules/benefit/vendor-plan/vendor-plan.component.html
+++ b/src/app/modules/benefit/vendor-plan/vendor-plan.component.html
@@ -141,16 +141,16 @@
                     <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Benefit
                         Type</label>
                     <div class="col-sm-8">
-                        <select placeholder="Select Gender" class="form-control" name="benefitTypeID" id="benefitTypeID"
+                        <!-- <select placeholder="Select Gender" class="form-control" name="benefitTypeID" id="benefitTypeID"
                             #benefitTypeID="ngModel" [(ngModel)]="AddVendor.benefitTypeID">
                             <option value="">--Select Event---</option>
-                            <option *ngFor="let benefit of Benefit" [value]="benefit.id">{{benefit.text}}</option> -->
+                            <option *ngFor="let benefit of Benefit" [value]="benefit.id">{{benefit.text}}</option>
                         </select>
 
                         <div *ngIf="benefitTypeID.invalid && (benefitTypeID.dirty || benefitTypeID.touched)"
                             class="error">
                             <div *ngIf="benefitTypeID.errors.required">benefitTypeID is required</div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="form-group">
