--- a/src/app/modules/leave/leave-plan/leave-plan.component.html
+++ b/src/app/modules/leave/leave-plan/leave-plan.component.html
@@ -16,7 +16,7 @@
         </nb-tabset>
         <ngx-default-content
         *ngIf="showEmpty"
-        pageHeader="Create your first Leave Plan"
+        pageHeader="Leave Plan"
         pageDescription="Click on the button to create a Leave Plan"
         buttonValue="Create Leave Plan"
         [loading]="loading"
@@ -48,6 +48,6 @@
 
 </ngx-createleave-request>
 
-<ngx-createleave-plan *ngIf="showLeavePlanModal" (closed)="leavePlanmodalClosed($event)"  [showModal]="showLeavePlanModal">
+<ngx-createleave-plan *ngIf="showLeavePlanModal"  (closed)="leavePlanmodalClosed($event)"  [showModal]="showLeavePlanModal">
 
 </ngx-createleave-plan>
