--- a/src/app/modules/recruitment/admin-dashboard/jobs/jobs.component.html
+++ b/src/app/modules/recruitment/admin-dashboard/jobs/jobs.component.html
@@ -1,4 +1,4 @@
-<ngx-componentsheader pageName='Jobs' [requiredButton]="rButton" (buttonClick)="addNewJob()"></ngx-componentsheader>
+<ngx-componentsheader pageName='Jobs' [requiredButton]="rButton" (buttonClick)=" newJobPosting()"></ngx-componentsheader>
 
 <div *ngIf="jobsCounter < 1" style="background-color: #ffffff;">
   <nb-card>
