--- a/src/app/modules/recruitment/admin-dashboard/newjob/newjob.component.html
+++ b/src/app/modules/recruitment/admin-dashboard/newjob/newjob.component.html
@@ -13,8 +13,7 @@
           <div class="form-group row ">
             <label for="Department" class="col-sm-3 col-form-label mylabel">Department</label>
             <div class="col-sm-6 col-md-6 col-lg-6">
-              <select class="custom-select" name="departmentName" #departmentName="ngModel"
-              [(ngModel)]="newJobModel.departmentId" required>
+              <select class="custom-select" name="departmentName" #departmentName="ngModel" [(ngModel)]="newJobModel.departmentId" required>
                 <option value="">--Select Department--</option>
                 <option *ngFor="let department of allDepartments" [value]="department.id">{{ department.name }}</option>
               </select>
@@ -25,7 +24,7 @@
           <div class="form-group row mydiv">
             <label for="Country" class="col-sm-3 col-form-label mylabel">Country</label>
             <div class="col-sm-6 col-md-6 col-lg-6">
-              <select class="custom-select" required>
+              <select name="country" #country="ngModel" [(ngModel)]="newJobModel.countryId" class="custom-select" required>
                 <option value="">Select </option>
                 <option value="1">One</option>
                 <option value="2">Two</option>
@@ -54,9 +53,9 @@
           </div>
 
           <div class="form-group row mydiv">
-            <label for="Descripion" [(ngModel)]="newJobModel.requirements" class="col-sm-3 col-form-label mylabel">Job Requirements</label>
+            <label for="Descripion" class="col-sm-3 col-form-label mylabel">Job Requirements</label>
             <div class="col-sm-6 col-md-6 col-lg-6">
-              <ngx-wysisyg-input style="padding-left: -10px;"></ngx-wysisyg-input>
+              <ngx-wysisyg-input  [(ngModel)]="newJobModel.requirements" style="padding-left: -10px;"></ngx-wysisyg-input>
             </div>
           </div>
 
@@ -141,40 +140,19 @@
           <div class="form-group row mydiv">
             <label for="currency" class="col-sm-3 col-form-label mylabel">Post Validity</label>
             <div class="col-sm-3 col-md-3 col-lg-3">
-              <select class="custom-select" required>
-                <option value="">From </option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-              </select>
+              <ngx-date [(value)]="newJobModel.postValidityFrom"></ngx-date>
             </div>
 
             <div class="col-sm-3 col-md-3 col-lg-3">
-              <select class="custom-select" required>
-                <option value="">To </option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-              </select>
+              <ngx-date [(value)]="newJobModel.postValidityTo"></ngx-date>
             </div>
           </div>
 
           <div class="form-group row">
             <label for="Beneficiary" class="col-sm-3 col-form-label">Reviewers</label>
             <div class="col-sm-6 col-md-6 col-lg-6">
-              <!-- <button type="submit" (click)="showMasterSearchModal()" class="btn cancel-button"
-                style="padding: 5px 20px;">
-                <span class="file-cta">
-                  <span class="file-icon">
-                    <i class="fas fa-plus" style="color: #4847E0; padding-right: 10px;"></i>
-                  </span>
-                </span>
-                Add Reviewers
-              </button> -->
-              <ngx-employee-master-search></ngx-employee-master-search>
-
+              <ngx-employee-master-search (masterSubmitted)="getSelectedEmployee($event,'employee')" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
             </div>
-
           </div>
 
 
@@ -184,7 +162,7 @@
             <label for="Country" class="col-sm-3 col-form-label mylabel">Scorecard <span
                 style="font-size: 16px; color: #95A8B8;">(optional)</span></label>
             <div class="col-sm-6 col-md-6 col-lg-6">
-              <select class="custom-select" required>
+              <select class="custom-select" name="scorecard" ngModel="scorecard" [(ngModel)]="newJobModel.scoreCardId" required>
                 <option value="">Select </option>
                 <option value="1">60%</option>
                 <option value="2">87%</option>
