--- a/src/app/modules/recruitment/admin-dashboard/newjob/newjob.component.html
+++ b/src/app/modules/recruitment/admin-dashboard/newjob/newjob.component.html
@@ -6,7 +6,7 @@
           <div class="form-group row mydiv">
             <label for="Title" class="col-sm-3 col-form-label mylabel">Job Title</label>
             <div class="col-sm-6 col-md-6 col-lg-6">
-              <input type="text" class="form-control" name="jobTitle" #jobTitle="ngModel" [(ngModel)]="newJobModel.position" placeholder="Job Title">
+              <!-- <input type="text" class="form-control" name="jobTitle" #jobTitle="ngModel" [(ngModel)]="newJobModel.position" placeholder="Job Title"> -->
             </div>
           </div>
 
