--- a/src/app/modules/performance/page/assign-kra/assign-kra.component.html
+++ b/src/app/modules/performance/page/assign-kra/assign-kra.component.html
@@ -2,17 +2,25 @@
 
 <div class="main-page-container">
     <div class="linear-form">
-        <div class="form-group">
-            <label>Appraisal Cycle</label>
+        <div class="form-group row">
+            <label class="col-sm-2">Appraisal Cycle</label>
+            <div class="col-sm-10">
             <select class="form-control" [(ngModel)]="selected_cylce">
               <option *ngFor="let cycle of cycles" [value]="cycle.id">{{cycle.name}}</option>
             </select>
+            </div>
         </div>
-        <div class="form-group">
-            <label>Key Result Area</label>
-            <select class="form-control" [(ngModel)]="editing_kra_data.kraId">
-              <option *ngFor="let kra of unselected_kras" [value]="kra.id">{{kra.section_name}}</option>
-            </select>
+        <div class="form-group row">
+            <label class="col-sm-2">Key Result Area</label>
+            <div class="col-sm-10">
+              <select class="form-control" [(ngModel)]="editing_kra_data.kraId">
+                <option *ngFor="let kra of unselected_kras" [value]="kra.id">{{kra.section_name}}</option>
+              </select>
+              <div *ngIf="emptykra" class="error">
+                <div >Please select Key Result Area for the Reviewer</div>
+              </div>
+            </div>
+        
         </div>
         <div class="form-group">
             <label>Reviewer</label>
