--- a/src/app/modules/performance/page/assign-kra/assign-kra.component.html
+++ b/src/app/modules/performance/page/assign-kra/assign-kra.component.html
@@ -1,49 +1,51 @@
 <ngx-componentsheader pageName='Assign KRA'></ngx-componentsheader>
 
 <div class="main-page-container">
-    <div class="linear-form">
-        <div class="form-group">
-            <label>Appraisal Cycle</label>
-            <select class="form-control" [(ngModel)]="selected_cylce">
-              <option *ngFor="let cycle of cycles" [value]="cycle.id">{{cycle.name}}</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label>Key Result Area</label>
-            <select class="form-control" [(ngModel)]="editing_kra_data.kraId">
-              <option *ngFor="let kra of unselected_kras" [value]="kra.id">{{kra.section_name}}</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label>Reviewer</label>
-            <ngx-employee-master-search [clearFlag]="master_search_clear_flag" (masterSubmitted)="reviewerSelected($event)"></ngx-employee-master-search>
-        </div>
-        <div class="form-group">
-          <label></label>
-          <div>
-            <button nbButton status="primary" (click)="addKra()" outline="true">
-              <nb-icon icon="plus"></nb-icon>
-              Add
-            </button>
-            <br/>
-            <button *ngFor="let kra of selected_kras" nbButton style="background: transparent; margin: 0.5rem">
-              {{kra.kraName}}
-              <nb-icon icon="close-outline" (click)="deleteKra(kra)" status="danger"></nb-icon>
-            </button>
-          </div>
-        </div>
-        <div class="form-group">
-          <label>Employee</label>
-          <ngx-employee-master-search (masterSubmitted)="employeesSelected($event)" [allowmultipleselection]="true"></ngx-employee-master-search>
+  <div class="linear-form">
+    <div class="form-group">
+      <label>Appraisal Cycle</label>
+      <select class="form-control" [(ngModel)]="selected_cylce">
+        <option *ngFor="let cycle of cycles" [value]="cycle.id">{{cycle.name}}</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label>Key Result Area</label>
+      <select class="form-control" [(ngModel)]="editing_kra_data.kraId">
+        <option *ngFor="let kra of unselected_kras" [value]="kra.id">{{kra.section_name}}</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label>Reviewer</label>
+      <ngx-employee-master-search [clearFlag]="master_search_clear_flag" (masterSubmitted)="reviewerSelected($event)">
+      </ngx-employee-master-search>
+    </div>
+    <div class="form-group">
+      <label></label>
+      <div>
+        <button nbButton status="primary" (click)="addKra()" outline="true">
+          <nb-icon icon="plus"></nb-icon>
+          Add
+        </button>
+        <br />
+        <button *ngFor="let kra of selected_kras" nbButton style="background: transparent; margin: 0.5rem">
+          {{kra.kraName}}
+          <nb-icon icon="close-outline" (click)="deleteKra(kra)" status="danger"></nb-icon>
+        </button>
       </div>
-        <div class="form-group">
-            <label></label>
-            <div>
-              <ngx-loadable-button (click)="assignKra()" [loading]="loadingSave">Assign</ngx-loadable-button>
-                <!-- <button nbButton status='primary' (click)="assignKra()">Assign</button> -->
-            </div>
-        </div>
-        <!-- <div class="form-group">
+    </div>
+    <div class="form-group">
+      <label>Employee</label>
+      <ngx-employee-master-search (masterSubmitted)="employeesSelected($event)" [allowmultipleselection]="true">
+      </ngx-employee-master-search>
+    </div>
+    <div class="form-group">
+      <label></label>
+      <div>
+        <ngx-loadable-button (click)="assignKra()" [loading]="loadingSave">Assign</ngx-loadable-button>
+        <!-- <button nbButton status='primary' (click)="assignKra()">Assign</button> -->
+      </div>
+    </div>
+    <!-- <div class="form-group">
             <label></label>
             <div>
                 <button nbButton status='primary' outline style="border: none;">
@@ -64,5 +66,5 @@
                 </button>
             </div>
         </div> -->
-    </div>
+  </div>
 </div>
